@@ -69,6 +69,7 @@ ver 0.19 (not yet released)
   - allow playlist directory without music directory
   - use XDG to auto-detect "music_directory" and "db_file"
 * add tags "AlbumSort", "MUSICBRAINZ_RELEASETRACKID"
+* disable global Latin-1 fallback for tag values
 * new resampler option using libsoxr
 * ARM NEON optimizations
 * install systemd unit for socket activation
